--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200&display=swap" rel="stylesheet"> 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/style.css">  
+    <link rel="stylesheet" href="./style.css">  
 </head>
 <body>
     <div class="header">
     <div class="container">
         <div class="nav">
             <div class="logo">
-                <a href="/index.html"><img src="/images/logo.png " width="125px"></a>
+                <a href="./index.html"><img src="./images/logo.png " width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/products.html">Products</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./products.html">Products</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="/account.html">Account</a></li>
+                    <li><a href="./account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="/cart.html"><img src="/images/cart.png" width="30px" height="30px"></a>
-            <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()" >
+            <a href="./cart.html"><img src="./images/cart.png" width="30px" height="30px"></a>
+            <img src="./images/menu.png" class="menu-icon" onclick="menutoggle()" >
     </div>
     <div class="row">
         <div class="col-2">
@@ -37,7 +37,7 @@
          <a href="#" class="btn">Explore Now &#8594;</a>
         </div>
         <div class="col-2">
-           <img src="/images/image1.png">
+           <img src="./images/image1.png">
         </div>
     </div>
 </div>
@@ -47,13 +47,13 @@
     <div class="small-container">
         <div class="row">
             <div class="col-3">
-                <img src="/images/category-1.jpg" alt="">
+                <img src="./images/category-1.jpg" alt="">
             </div>
             <div class="col-3">
-                <img src="/images/category-2.jpg" alt="">
+                <img src="./images/category-2.jpg" alt="">
             </div>
             <div class="col-3">
-                <img src="/images/category-3.jpg" alt="">
+                <img src="./images/category-3.jpg" alt="">
             </div>
         </div>  
     </div>
@@ -64,7 +64,7 @@
       <h2 class="title">Featured Products</h2>
       <div class="row">
           <div class="col-4">
-             <img src="/images/product-1.jpg" alt="">  
+             <img src="./images/product-1.jpg" alt="">  
             <h4>Red Printed T-Shirts</h4>
             <div class="rating">
                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -78,7 +78,7 @@
           </div>
 
           <div class="col-4">
-            <img src="/images/product-2.jpg" alt="">  
+            <img src="./images/product-2.jpg" alt="">  
             <h4>Red Printed T-Shirts</h4>
             <div class="rating">
                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -93,7 +93,7 @@
 
 
         <div class="col-4">
-            <img src="/images/product-3.jpg" alt="">  
+            <img src="./images/product-3.jpg" alt="">  
             <h4>Red Printed T-Shirts</h4>
             <div class="rating">
                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -107,7 +107,7 @@
         </div>
 
           <div class="col-4">
-            <img src="/images/product-4.jpg" alt="">  
+            <img src="./images/product-4.jpg" alt="">  
             <h4>Red Printed T-Shirts</h4>
             <div class="rating">
                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -124,7 +124,7 @@
       <h2 class="title">Latest Products</h2>
       <div class="row">
         <div class="col-4">
-          <img src="/images/product-5.jpg" alt="">  
+          <img src="./images/product-5.jpg" alt="">  
           <h4>Red Printed T-Shirts</h4>
           <div class="rating">
               <i class="fa fa-star" aria-hidden="true"></i>
@@ -138,7 +138,7 @@
         </div>
 
         <div class="col-4">
-          <img src="/images/product-6.jpg" alt="">  
+          <img src="./images/product-6.jpg" alt="">  
           <h4>Red Printed T-Shirts</h4>
           <div class="rating">
               <i class="fa fa-star" aria-hidden="true"></i>
@@ -153,7 +153,7 @@
 
 
       <div class="col-4">
-          <img src="/images/product-7.jpg" alt="">  
+          <img src="./images/product-7.jpg" alt="">  
           <h4>Red Printed T-Shirts</h4>
           <div class="rating">
               <i class="fa fa-star" aria-hidden="true"></i>
@@ -167,7 +167,7 @@
       </div>
 
         <div class="col-4">
-          <img src="/images/product-8.jpg" alt="">  
+          <img src="./images/product-8.jpg" alt="">  
           <h4>Red Printed T-Shirts</h4>
           <div class="rating">
               <i class="fa fa-star" aria-hidden="true"></i>
@@ -183,7 +183,7 @@
 
     <div class="row">
         <div class="col-4">
-          <img src="/images/product-9.jpg" alt="">  
+          <img src="./images/product-9.jpg" alt="">  
           <h4>Red Printed T-Shirts</h4>
           <div class="rating">
               <i class="fa fa-star" aria-hidden="true"></i>
@@ -197,7 +197,7 @@
         </div>
 
         <div class="col-4">
-          <img src="/images/product-10.jpg" alt="">  
+          <img src="./images/product-10.jpg" alt="">  
           <h4>Red Printed T-Shirts</h4>
           <div class="rating">
               <i class="fa fa-star" aria-hidden="true"></i>
@@ -212,7 +212,7 @@
 
 
       <div class="col-4">
-          <img src="/images/product-11.jpg" alt="">  
+          <img src="./images/product-11.jpg" alt="">  
           <h4>Red Printed T-Shirts</h4>
           <div class="rating">
               <i class="fa fa-star" aria-hidden="true"></i>
@@ -226,7 +226,7 @@
       </div>
 
         <div class="col-4">
-          <img src="/images/product-12.jpg" alt="">  
+          <img src="./images/product-12.jpg" alt="">  
           <h4>Red Printed T-Shirts</h4>
           <div class="rating">
               <i class="fa fa-star" aria-hidden="true"></i>
@@ -245,7 +245,7 @@
    <div class="small-container">
        <div class="row">
            <div class="col-2">
-            <img src="/images/exclusive.png" class="offer-img">   
+            <img src="./images/exclusive.png" class="offer-img">   
            </div>
            <div class="col-2">
             <p>Exclusively Available on Redstore</p>
@@ -276,7 +276,7 @@
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star-half-o" aria-hidden="true"></i>
              </div>
-                 <img src="/images/santosh.png" >
+                 <img src="./images/santosh.png" >
                  <h3>Santosh Kumar Thakur</h3>
               </div>
 
@@ -292,7 +292,7 @@
                    <i class="fa fa-star" aria-hidden="true"></i>
                    <i class="fa fa-star-half-o" aria-hidden="true"></i>
             </div>
-                <img src="/images/annie.png" >
+                <img src="./images/annie.png" >
                 <h3>Anuradha Kumari Singh</h3>
              </div>
 
@@ -309,7 +309,7 @@
                    <i class="fa fa-star" aria-hidden="true"></i> 
                    <i class="fa fa-star-half-o" aria-hidden="true"></i>
             </div>
-                <img src="/images/user-3.png" >
+                <img src="./images/user-3.png" >
                 <h3>Annie James</h3>
              </div>
           </div>
@@ -319,19 +319,19 @@
     <div class="brands">
         <div class="row">
             <div class="col-5">
-                <img src="/images/logo-godrej.png">
+                <img src="./images/logo-godrej.png">
             </div>
             <div class="col-5">
-                <img src="/images/logo-oppo.png">
+                <img src="./images/logo-oppo.png">
             </div>
             <div class="col-5">
-                <img src="/images/logo-coca-cola.png">
+                <img src="./images/logo-coca-cola.png">
             </div>
             <div class="col-5">
-                <img src="/images/logo-paypal.png">
+                <img src="./images/logo-paypal.png">
             </div>
             <div class="col-5">
-                <img src="/images/logo-philips.png">
+                <img src="./images/logo-philips.png">
             </div>
         </div>
     </div>
@@ -343,12 +343,12 @@
                 <h3>Download Our App</h3>
                 <p>Download App for Andriod and IOS Mobile Phone.</p>
                 <div class="app-logo">
-                    <img src="/images/play-store.png" alt="">
-                    <img src="/images/app-store.png" alt="">
+                    <img src="./images/play-store.png" alt="">
+                    <img src="./images/app-store.png" alt="">
                 </div>
             </div>
             <div class="footer-col-2">
-                <img src="/images/logo-white.png" alt="">
+                <img src="./images/logo-white.png" alt="">
                 <p>Our Purpose Is To Sustainbly Make the Pleasure and Benefits of Sports Accessible to the Many.</p>
             </div>
 
