--- a/cart.html
+++ b/cart.html
@@ -9,29 +9,28 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200&display=swap" rel="stylesheet"> 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/style.css">  
+    link rel="stylesheet" href="./style.css">  
 </head>
 <body>
     
     <div class="container">
         <div class="nav">
             <div class="logo">
-                <a href="/index.html"><img src="/images/logo.png " width="125px"></a>
+                <a href="./index.html"><img src="./images/logo.png " width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/products.html">Products</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./products.html">Products</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="/account.html">Account</a></li>
+                    <li><a href="./account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="/cart.html"><img src="/images/cart.png" width="30px" height="30px"></a>
-            <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()" >
+            <a href="./cart.html"><img src="./images/cart.png" width="30px" height="30px"></a>
+            <img src="./images/menu.png" class="menu-icon" onclick="menutoggle()" >
     </div>
 </div>
-
 <!-- Cart items Details -->
 <div class="small-container cart-page" >
     <table>
