--- a/cart.html
+++ b/cart.html
@@ -42,7 +42,7 @@
         <tr>
             <td>
                 <div class="cart-info">
-                    <img src="/images/buy-1.jpg" alt="">
+                    <img src="./images/buy-1.jpg" alt="">
                     <div>
                         <p>Red Printed T-Shirt</p>
                         <small> Price: ₹1299 </small>
@@ -58,7 +58,7 @@
         <tr>
             <td>
                 <div class="cart-info">
-                    <img src="/images/buy-2.jpg" alt="">
+                    <img src="./images/buy-2.jpg" alt="">
                     <div>
                         <p>Red Printed T-Shirt</p>
                         <small> Price: ₹699 </small>
@@ -74,7 +74,7 @@
         <tr>
             <td>
                 <div class="cart-info">
-                    <img src="/images/buy-3.jpg" alt="">
+                    <img src="./images/buy-3.jpg" alt="">
                     <div>
                         <p>Red Printed T-Shirt</p>
                         <small> Price: ₹1299 </small>
@@ -120,12 +120,12 @@
                 <h3>Download Our App</h3>
                 <p>Download App for Andriod and IOS Mobile Phone.</p>
                 <div class="app-logo">
-                    <img src="/images/play-store.png" alt="">
-                    <img src="/images/app-store.png" alt="">
+                    <img src="./images/play-store.png" alt="">
+                    <img src="./images/app-store.png" alt="">
                 </div>
             </div>
             <div class="footer-col-2">
-                <img src="/images/logo-white.png" alt="">
+                <img src="./images/logo-white.png" alt="">
                 <p>Our Purpose Is To Sustainbly Make the Pleasure and Benefits of Sports Accessible to the Many.</p>
             </div>
 
