--- a/products.html
+++ b/products.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="nav">
             <div class="logo">
-                <a href="./index.html"><img src="/images/logo.png " width="125px"></a>
+                <a href="./index.html"><img src="./images/logo.png " width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
