--- a/products-details.html
+++ b/products-details.html
@@ -9,26 +9,26 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200&display=swap" rel="stylesheet"> 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/style.css">  
+    <link rel="stylesheet" href="./style.css">  
 </head>
 <body>
     
     <div class="container">
         <div class="nav">
             <div class="logo">
-                <a href="/index.html"><img src="/images/logo.png " width="125px"></a>
+                <a href="./index.html"><img src="./images/logo.png " width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/products.html">Products</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./products.html">Products</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="/account.html">Account</a></li>
+                    <li><a href="./account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="/cart.html"><img src="/images/cart.png" width="30px" height="30px"></a>
-            <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()" >
+            <a href="./cart.html"><img src="/images/cart.png" width="30px" height="30px"></a>
+            <img src="./images/menu.png" class="menu-icon" onclick="menutoggle()" >
     </div>
 </div>
  <!-- Single Product Details -->
@@ -36,20 +36,20 @@
  <div class="small-container single-product">
      <div class="row">
          <div class="col-2">
-             <img src="/images/gallery-1.jpg" width="100%" id="ProductImg">
+             <img src="./images/gallery-1.jpg" width="100%" id="ProductImg">
 
              <div class="small-img-row">
                  <div class="small-img-col">
-                     <img src="/images/gallery-1.jpg" width="100%" class="SmallImg">
+                     <img src="./images/gallery-1.jpg" width="100%" class="SmallImg">
                  </div>
                  <div class="small-img-col">
-                     <img src="/images/gallery-2.jpg" width="100%" class="SmallImg">
+                     <img src="./images/gallery-2.jpg" width="100%" class="SmallImg">
                  </div>
                  <div class="small-img-col">
-                     <img src="/images/gallery-3.jpg" width="100%" class="SmallImg">
+                     <img src="./images/gallery-3.jpg" width="100%" class="SmallImg">
                  </div>
                  <div class="small-img-col">
-                     <img src="/images/gallery-4.jpg" width="100%" class="SmallImg">
+                     <img src="./images/gallery-4.jpg" width="100%" class="SmallImg">
                  </div>
              </div>
 
@@ -86,7 +86,7 @@
   <div class="small-container">
   <div class="row">
       <div class="col-4">
-       <a href="/products-details.html"><img src="/images/product-9.jpg" alt=""> </a>  
+       <a href="./products-details.html"><img src="/images/product-9.jpg" alt=""> </a>  
         <h4>Red Printed T-Shirts</h4>
         <div class="rating">
             <i class="fa fa-star" aria-hidden="true"></i>
@@ -100,7 +100,7 @@
       </div>
 
       <div class="col-4">
-        <img src="/images/product-10.jpg" alt="">  
+        <img src="./images/product-10.jpg" alt="">  
         <h4>Red Printed T-Shirts</h4>
         <div class="rating">
             <i class="fa fa-star" aria-hidden="true"></i>
@@ -115,7 +115,7 @@
 
 
     <div class="col-4">
-        <img src="/images/product-11.jpg" alt="">  
+        <img src="./images/product-11.jpg" alt="">  
         <h4>Red Printed T-Shirts</h4>
         <div class="rating">
             <i class="fa fa-star" aria-hidden="true"></i>
@@ -129,7 +129,7 @@
     </div>
 
       <div class="col-4">
-        <img src="/images/product-12.jpg" alt="">  
+        <img src="./images/product-12.jpg" alt="">  
         <h4>Red Printed T-Shirts</h4>
         <div class="rating">
             <i class="fa fa-star" aria-hidden="true"></i>
@@ -152,12 +152,12 @@
                 <h3>Download Our App</h3>
                 <p>Download App for Andriod and IOS Mobile Phone.</p>
                 <div class="app-logo">
-                    <img src="/images/play-store.png" alt="">
-                    <img src="/images/app-store.png" alt="">
+                    <img src="./images/play-store.png" alt="">
+                    <img src="./images/app-store.png" alt="">
                 </div>
             </div>
             <div class="footer-col-2">
-                <img src="/images/logo-white.png" alt="">
+                <img src="./images/logo-white.png" alt="">
                 <p>Our Purpose Is To Sustainbly Make the Pleasure and Benefits of Sports Accessible to the Many.</p>
             </div>
 
